--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_setting" />
+        <provider
+            android:authorities="com.example.android.popmovies"
+            android:name=".data.MovieProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
